# crosswords

./: .gitignore  LICENSE  setup-env
elm/src/: Main.elm  Puzzle.elm
libxw/: README.md  pyproject.toml  requirements.txt  setup.cfg
libxw/examples/: 001.json
libxw/src/libxw/: examples.py  game.py  legacy.py  puzzle.py  render.py  shell.py
libxw/tests/: puzzle_test.py  renderer_test.py
