# Configuration file for how to "build" our package.
#
# https://www.python.org/dev/peps/pep-0517/
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
requires = [
  "setuptools>=40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
[tool.mypy]
python_version = "3.10"

# Make user-facing errors slightly nicer.
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Opt into some extra checks.
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
